Edit post for content

--- a/_posts/2019-11-05-ufw.md
+++ b/_posts/2019-11-05-ufw.md
@@ -17,9 +17,9 @@ root@undernets:~# uptime
 
 The oldest log entry I have is dated Sep 29 06:40:15 so presumably either a. I didn't turn on `ufw` until three weeks after I first spun up the instance or b. `ufw` deletes rolled logs after a certain amount of time.
 
-I'm guessing it's the latter. Logs that pile up without getting shipped and/or deleted would eventually fill up available storage space. A friend and mentor taught me best practice is to mount `/var` in it's own partition for that very reason.
+Most likely it's the latter. Logs that pile up with being deleted would eventually consume all available storage space. A friend and mentor taught me best practice is to mount `/var` in it's own partition for that very reason.
 
-Now that I think of it, I can't recall whether port 22 was enabled by default on the Digital Ocean image. Or for that matter, whether ufw was enabled by default.
+Now that I think of it, I can't recall whether port 22 was enabled by default on the Digital Ocean image. Or for that matter, whether `ufw` was enabled by default.
 
 ```
 root@undernets:~# ufw status verbose
@@ -34,7 +34,7 @@ To                         Action      From
 22/tcp (OpenSSH (v6))      ALLOW IN    Anywhere (v6)
 ```
 
-There were roughly 125K `ufw.log` entries so I pulled approximately five hours worth from the end of the oldest log, 233 entries in all.
+There were roughly 125K `ufw.log` entries so I pulled approximately five hours worth from the end of the oldest log, 857 entries in all.
 
 ## Source IPs individually geolocated
 
