Edit post for content

--- a/_posts/2019-11-05-ufw.md
+++ b/_posts/2019-11-05-ufw.md
@@ -19,7 +19,7 @@ The oldest log entry I have is dated Sep 29 06:40:15 so presumably either a. I d
 
 Most likely it's the latter. Logs that pile up with being deleted would eventually consume all available storage space. A friend and mentor taught me best practice is to mount `/var` in it's own partition for that very reason.
 
-Now that I think of it, I can't recall whether port 22 was enabled by default on the Digital Ocean image. Or for that matter, whether `ufw` was enabled by default.
+The Dev Ops engineer who taught me what little I know about this stuff was always adamant that a public-facing host be locked down to the greatest extent possible. If you don't need it, keep it closed. Since the exercise didn't require anything other than the ability to `ssh` remotely, the only port I opened up was 22.
 
 ```
 root@undernets:~# ufw status verbose
@@ -34,9 +34,15 @@ To                         Action      From
 22/tcp (OpenSSH (v6))      ALLOW IN    Anywhere (v6)
 ```
 
-There were roughly 125K `ufw.log` entries so I pulled approximately five hours worth from the end of the oldest log, 857 entries in all.
+Now that I think of it, I can't recall whether port 22 was open by default on the Digital Ocean image. Or for that matter, whether `ufw` was enabled by default.
 
-## Source IPs individually geolocated
+# Data
+
+There were roughly 125K `ufw.log` entries so I pulled approximately five hours worth worth of data from the end of the oldest log, 857 entries in all.
+
+## Geolocation
+
+For my IP geolocation data I used trial credits from IP2Location, in part because they provide a nifty [Google Sheets add-on](https://www.ip2location.com/free/plugins/others/sheet-add-on) for pulling results directly into the sheet and in part because I'm woefully inept when it comes to tapping into web APIs and as far as I can tell the the only way to utilize [Ipinfo.io](https://ipinfo.io/) to reconcile geolocation a data set of more than one IP at a time.
 
 <iframe src="https://www.google.com/maps/d/embed?mid=1I-MTP01exfiHcsJoE1Oqux-0kV8V0vBq&hl=en" width="640" height="480"></iframe>
 
@@ -47,3 +53,5 @@ There were roughly 125K `ufw.log` entries so I pulled approximately five hours w
 ## Heat map of source IPs by country of origin
 
 <iframe width="639.513647946926" height="395.3767630933704" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ1P-pqsXpXNoGTqMfxcX_2t-FjB-kFaJN-tPlGj2HZcm4Gpmnp0orhfl1TLLU0kxAfyHJZa6vr9o6u/pubchart?oid=1815928486&amp;format=interactive"></iframe>
+
+# Relationship of source to destination ports
