Edit post for content

--- a/_posts/2019-11-05-ufw.md
+++ b/_posts/2019-11-05-ufw.md
@@ -40,6 +40,14 @@ Now that I think of it, I can't recall whether port 22 was open by default on th
 
 There were roughly 125K `ufw.log` entries so I pulled approximately five hours worth worth of data from the end of the oldest log, 857 entries in all.
 
+I poked around online a bit to try and figure out how to pull logs from a remote host over an `ssh` tunnel. The easiest solution I found was a nifty bit of command line wizardry from user Florian Fida on a [Unix & Linux Stack Exchange](https://unix.stackexchange.com/questions/2857/copy-a-file-back-to-local-system-with-ssh) post.
+
+```
+ssh root@undernets.me 'cat /var/ufw.log' > /Downloads/ufw.log
+```
+
+I'm fairly certain this only works because the logs are plain text files and in this circumstance `cat` is reading the content of the log rather than dealing with actually file transfer. If they were binaries, `scp` or `sftp` would be in order. I doubt `cat` would be of any use.
+
 ## Geolocation
 
 For my IP geolocation data I used trial credits from IP2Location, in part because they provide a nifty [Google Sheets add-on](https://www.ip2location.com/free/plugins/others/sheet-add-on) for pulling results directly into the sheet and in part because I'm woefully inept when it comes to tapping into web APIs and as far as I can tell the the only way to utilize [Ipinfo.io](https://ipinfo.io/) to reconcile geolocation a data set of more than one IP at a time.
