Edit post for content

--- a/_posts/2019-11-05-ufw.md
+++ b/_posts/2019-11-05-ufw.md
@@ -48,9 +48,15 @@ ssh root@undernets.me 'cat /var/ufw.log' > /Downloads/ufw.log
 
 I'm fairly certain this only works because the logs are plain text files and in this circumstance `cat` is reading the content of the log rather than dealing with actually file transfer. If they were binaries, `scp` or `sftp` would be in order. I doubt `cat` would be of any use.
 
-## Geolocation
+Once the logs were local, I cleaned them up replacing (most) spaces with commas, changed the file sufix to .csv, and imported the data into a Google Sheet.
 
-For my IP geolocation data I used trial credits from IP2Location, in part because they provide a nifty [Google Sheets add-on](https://www.ip2location.com/free/plugins/others/sheet-add-on) for pulling results directly into the sheet and in part because I'm woefully inept when it comes to tapping into web APIs and as far as I can tell the the only way to utilize [Ipinfo.io](https://ipinfo.io/) to reconcile geolocation a data set of more than one IP at a time.
+<iframe width="640" height="480" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ1P-pqsXpXNoGTqMfxcX_2t-FjB-kFaJN-tPlGj2HZcm4Gpmnp0orhfl1TLLU0kxAfyHJZa6vr9o6u/pubhtml?gid=1128522457&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+
+# Geolocation
+
+For my IP geolocation data I signed up with IP2Location for a demo API key good for 5,000 credits. I opted for IP2Location in part because they provide a nifty [Google Sheets add-on](https://www.ip2location.com/free/plugins/others/sheet-add-on) for pulling geolocation information directly into the sheet using a simple spreadsheet function. I also opted for IP2Location because I'm woefully inept when it comes to tapping into web APIs and as far as I can tell the the only easy way to utilize [Ipinfo.io](https://ipinfo.io/) via web interface is one IP address at a time.
+
+## IP source geolocation mapped to coordinates
 
 <iframe src="https://www.google.com/maps/d/embed?mid=1I-MTP01exfiHcsJoE1Oqux-0kV8V0vBq&hl=en" width="640" height="480"></iframe>
 
@@ -61,5 +67,3 @@ For my IP geolocation data I used trial credits from IP2Location, in part becaus
 ## Heat map of source IPs by country of origin
 
 <iframe width="639.513647946926" height="395.3767630933704" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ1P-pqsXpXNoGTqMfxcX_2t-FjB-kFaJN-tPlGj2HZcm4Gpmnp0orhfl1TLLU0kxAfyHJZa6vr9o6u/pubchart?oid=1815928486&amp;format=interactive"></iframe>
-
-# Relationship of source to destination ports
