Edit post for content

--- a/_posts/2020-03-04-diorama.md
+++ b/_posts/2020-03-04-diorama.md
@@ -17,7 +17,7 @@ This image is even clearer in my mind than the moment when, nearly two decades l
 
 This is one in a series of dioramas depicting mis-rememberings that have been reconstructed -- or perhaps mis-constructed -- by individuals from their own false memories.
 
-Artists were challenged to create a diorama which includes two unique perspectives, visual as well as interpretive.
+Artists were challenged to create a diorama which portrays two unique perspectives, visual as well as interpretive.
 
 # Making
 
