Edit post for content

--- a/_posts/2020-03-04-diorama.md
+++ b/_posts/2020-03-04-diorama.md
@@ -19,13 +19,13 @@ This is one in a series of dioramas depicting mis-rememberings that have been re
 
 Artists were challenged to create a diorama which portrays two unique perspectives, visual as well as interpretive.
 
-# Making
+# Making of
 
 {% include video id="1rPp5HKgwNLcYKaTCgdZk0qQxcl2WxcX3" provider="google-drive" %}
 
 {% include video id="1Qv3B3NQp3BVqnKKo-BEK3XK78uTkhdR3" provider="google-drive" %}
 
-# Front
+# Front perspective
 
 {% include video id="1WjuoKBHnjeDtBiLWgetAY792pp4w_1V4" provider="google-drive" %}
 
@@ -37,7 +37,7 @@ Artists were challenged to create a diorama which portrays two unique perspectiv
 
 {% include video id="15xjaHjvI3ggCOT2MftcQI3GRQoWrg1KF" provider="google-drive" %}
 
-# Back
+# Rear perspective
 
 {% include video id="1yqqIm2C_kl5xaONNUqsuAK_3wf4YqF1d" provider="google-drive" %}
 
