Edit post for content

--- a/_posts/2020-03-04-diorama.md
+++ b/_posts/2020-03-04-diorama.md
@@ -7,7 +7,7 @@ categories:   Cabinets
 
 # Narrative
 
-My mother bought land in Delaware County, NY, when I was born and for a certain period of my childhood she, her partner and I would make the trip by car most weekends out of the year.
+My mother bought land in Delaware County, NY when I was born and for a certain period of my childhood she, her partner and I would make the trip by car most weekends out of the year.
 
 I was perhaps six during one particularly cold winter night when my mother hit a deer while I was sleeping in the back seat. And yet, I've always had a clear picture in my mind of the deer dashing across the road in our headlights. As though I'd been looking through the windshield myself.
 
